what you do icons

--- a/index.html
+++ b/index.html
@@ -65,13 +65,36 @@
         </section>
 
         <!-- "what we do" section-->
-        <section>
+        <section id="what-we-do">
             <h2>What We Do</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, blanditiis et ratione quibusdam rerum nemo in? Maxime voluptatem porro rerum, veritatis reiciendis neque odio quae ea eaque distinctio officia similique.
+            </p>
         </section>
 
         <!--"what you do" section-->
-        <section>
+        <section id="what-you-do">
             <h2>What You Do</h2>
+            <div>
+                <img src="./images/step-1.svg" alt="" />
+                <h3>Step 1: Fill out the Form Above.</h3>
+                <p>You're already here, so why not?</p>
+            </div>
+            <div>
+                <img src="./images/step-2.svg" alt="" />
+                <h3>Step 2: Consult with One of Our Trainers.</h3>
+                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+            </div>
+            <div>
+                <img src="./images/step-3.svg" alt="" />
+                <h3>Step 3: Get Running.</h3>
+                <p>Hit the ground running (literally) once your trainer lays out you plan.</p>
+            </div>
+            <div>
+                <img src="./images/step-4.svg" alt="" />
+                <h3>Step 4: See Results</h3>
+                <p>Bi-weekly chekins with your trainer will keep you focused.</p>
+            </div>
         </section>
 
         <!--"meet your trainers" section-->
