--- a/index.html
+++ b/index.html
@@ -98,8 +98,36 @@
         </section>
 
         <!--"meet your trainers" section-->
-        <section>
-            <h2>Meet Your Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet Your Trainers</h2>
+            <!--first trainer-->
+            <article class="trainer">
+                <img src="./images/trainer-1.jpg" alt="Arron Stephens in his workout cloths, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo provident recusandae adipisci accusamus debitis tenetur enim harum iure cum fuga. Cum, iure perferendis. Voluptate culpa nobis mollitia perspiciatis ut illum.
+                    </p>
+                </div>
+            </article>
+            <!--Second Trainer-->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam quaerat deserunt corrupti ut mollitia, iusto voluptatum rerum hic assumenda harum, nostrum ipsum culpa odio sint corporis? Molestiae, totam non.</p>
+                </div>
+                <img src="./images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+            <!--Third Trainer-->
+            <article class="trainer">
+                <img src="./images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4> Strength</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sapiente quidem nemo, facere, saepe ex consectetur sit commodi quasi exercitationem aperiam. Omnis natus velit sit numquam quas sint dolorum vel.</p>
+                </div>
+            </article>
         </section>
 
         <!--"reach out" section-->
