--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div>
                 <img src="./images/step-4.svg" alt="" />
                 <h3>Step 4: <span>See Results</span></h3>
-                <p>Bi-weekly chekins with your trainer will keep you focused.</p>
+                <p>Bi-weekly checkins with your trainer will keep you focused.</p>
             </div>
         </section>
 
