--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                     </p>
                 </div>
             </article>
+
             <!--Second Trainer-->
             <article class="trainer">
                 <div class="trainer-bio text-right">
@@ -131,10 +132,10 @@
         </section>
 
         <!--"reach out" section-->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.3916840388424!2d-111.95280758459648!3d40.66533797933711!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87528b8aeb7b3f2b%3A0x3243e00744419f8d!2s2320%20W%204805%20S%2C%20Salt%20Lake%20City%2C%20UT%2084118!5e0!3m2!1sen!2sus!4v1588282862316!5m2!1sen!2sus" width="400" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.3916840388424!2d-111.95280758459648!3d40.66533797933711!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87528b8aeb7b3f2b%3A0x3243e00744419f8d!2s2320%20W%204805%20S%2C%20Salt%20Lake%20City%2C%20UT%2084118!5e0!3m2!1sen!2sus!4v1588282862316!5m2!1sen!2sus" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 <div>
                     <h3>Run Buddy</h3>
                     <p>
@@ -157,7 +158,7 @@
         <footer>
             <h2>❤️ Made with love by Run Buddy.</h2>
                 <div>
-                    <a href="#">Read Our Privacy Policy</a><br />
+                    <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
                     &copy; 2019 Run Buddy, Inc.
                 </div>
         </footer>
