--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@
             <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.3916840388424!2d-111.95280758459648!3d40.66533797933711!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87528b8aeb7b3f2b%3A0x3243e00744419f8d!2s2320%20W%204805%20S%2C%20Salt%20Lake%20City%2C%20UT%2084118!5e0!3m2!1sen!2sus!4v1588282862316!5m2!1sen!2sus" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <div class="contact-form">
+                    <h3>Contact Us</h3>
+                    <form>
+                        <label for="contact-name">Your Name</label>
+                        <input type="text" id="contact-name" placeholder="Your Name">
+
+                        <label for="contact-message">Message</label>
+                        <textarea id="contact-message" placeholder="Message"></textarea>
+                        
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
                 <div>
                     <h3>Run Buddy</h3>
                     <p>
