--- a/index.html
+++ b/index.html
@@ -161,30 +161,32 @@
             <div class="trainers">
             <!--first trainer-->
                 <article class="trainer">
-                    <img src="./images/trainer-1.jpg" alt="Arron Stephens in his workout cloths, ready to pump iron" />
-                    <div class="trainer-bio">
+                    <div class="trainer-img trainer-1">
                         <h3 class="trainer-name">Arron Stephens</h3>
                         <h4 class="trainer-role">Speed / Strength</h4>
+                    </div>
+                    <div class="trainer-bio">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo provident recusandae adipisci accusamus debitis tenetur enim harum iure cum fuga. Cum, iure perferendis. Voluptate culpa nobis mollitia perspiciatis ut illum.
                         </p>
                     </div>
                 </article>
-
                 <!--Second Trainer-->
                 <article class="trainer">
-                    <img src="./images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-                    <div class="trainer-bio">
+                    <div class="trainer-img trainer-2">   
                         <h3 class="trainer-name">Joanna Gill</h3>
                         <h4 class="trainer-role">Endurance</h4>
+                    </div>
+                    <div class="trainer-bio"></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam quaerat deserunt corrupti ut mollitia, iusto voluptatum rerum hic assumenda harum, nostrum ipsum culpa odio sint corporis? Molestiae, totam non.</p>
                     </div>
                 </article>
                 <!--Third Trainer-->
                 <article class="trainer">
-                    <img src="./images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                    <div class="trainer-img trainer-3">         
+                            <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                            <h4 class="trainer-role"> Strength</h4>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Harry "the Headband" Smith</h3>
-                        <h4 class="trainer-role"> Strength</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sapiente quidem nemo, facere, saepe ex consectetur sit commodi quasi exercitationem aperiam. Omnis natus velit sit numquam quas sint dolorum vel.</p>
                     </div>
                 </article>
